--- a/.github/workflows/draw_keymaps.yaml
+++ b/.github/workflows/draw_keymaps.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       keymap_patterns:
         description: "Path specification for keymaps to be parsed"
-        default: "config/keymap/qwerty.keymap"
+        default: "config/keymap/charybdis.keymap"
         required: false
         type: string
       config_path:
@@ -40,12 +40,12 @@ on:
         type: string
       commit_message:
         description: "Commit message for updated images. Ignored if `amend_commit` is `true`."
-        default: "keymap-drawer render"
+        default: "chore: render keymap"
         required: false
         type: string
       amend_commit:
         description: "Whether to amend the last commit instead of creating a new one. Make sure you understand the implications of rewriting the branch history if you use this option!"
-        default: true
+        default: false
         required: false
         type: boolean
       install_branch:
@@ -138,53 +138,6 @@ jobs:
 
       - name: Draw keymaps
         id: draw
-        env:
-          KEYMAP_raw_binding_map: >
-            {
-              "&bootloader": "BOOT LDR",
-              "&mkp RCLK": "R CLK",
-              "&mkp LCLK": "L CLK",
-              "&mkp MCLK": "Mid CLK",
-              "&mkp MB4": "BACK",
-              "&mkp MB5": "FWD",
-              "&mmv MOVE_UP": "MOVE UP",
-              "&mmv MOVE_DOWN": "MOVE D",
-              "&mmv MOVE_LEFT": "MOVE L",
-              "&mmv MOVE_RIGHT": "MOVE R",
-              "&msc MOVE_UP": "WHEEL D",
-              "&msc MOVE_DOWN": "WHEEL U",
-              "&msc MOVE_LEFT": "WHEEL L",
-              "&msc MOVE_RIGHT": "WHEEL R",
-              "&h_split": "HSPLIT",
-              "&v_split": "VSPLIT",
-              "&caps_word": "CAPS WORD",
-              "&td_bore": "L_BASE L_EXTRA",
-              "&tdmt": "L1/BS LCLICK",
-              "&tdbt": "L2/ESC RCLICK",
-              "&td_layers": "L_BASE L_GAME",
-              "&td_cursor": "SCRL SLOW",
-              "&td_home": "~/",
-              "&td_equals": "=",
-              "&shrug": "SHRUG",
-              "&lgtm": "LGTM",
-              "&gcm": "GIT COMMIT",
-              "&clip_hist": "CLIP HIST",
-              "&new_dir": "NEW DIR",
-              "&py_iter": "PYTHON LOOP",
-              "&js_iter": "JS LOOP",
-              "&studio_unlock": "ZMK Studio",
-              "&td_esc_scrl_slow": "ESC SCRL SLOW",
-              "&td_space_nav": "SPACE NAV",
-              "&td_bs": "BS NUM",
-              "&detach_session": "TMUX DETCH",
-              "&create_or_attach": "TMUX ATTCH",
-              "&next_pane" : "TMUX NEXT",
-              "&show_sessions": "TMUX SESH",
-              "&sync_panes": "TMUX SYNC",
-              "&sudo": "sudo!!",
-              "&code_blk": "```",
-              "&home_dir": "~/"
-            }
         run: |
           get_args() {
               local keyboard=$2
