--- a/build.yaml
+++ b/build.yaml
@@ -6,19 +6,17 @@ board:
 shield:
   - charybdis_left
   - charybdis_right
-  - charybdis_dongle
   - settings_reset
 
 format:
   - bt
-  - dongle
   - reset
 
 keymap:
-  - qwerty
+  - charybdis
 
 include:
   - board: nice_nano_v2
     shield: charybdis_right
-    keymap: qwerty
+    keymap: charybdis
     snippet: studio-rpc-usb-uart
