--- a/config/keymap/behaviors.dtsi
+++ b/config/keymap/behaviors.dtsi
@@ -2,20 +2,11 @@
 #define KEYS_R 6 7 8 9 10 11 18 19 20 21 22 23 30 31 32 33 34 35 39 40 16 15 14 13  // Right-hand keys.
 #define THUMBS 36 37 38 39 40  // Thumb keys.
 
-/ {
+/ {    
     behaviors {
-        ht_num_func: homerow_mod {
-            compatible = "zmk,behavior-hold-tap";
-            #binding-cells = <2>;
-            flavor = "tap-preferred";
-            tapping-term-ms = <175>; // triggers the hold behavior when the tapping-term-ms has expired
-            quick-tap-ms = <150>; // If you press a tapped hold-tap again within quick-tap-ms milliseconds of the first press, it will always trigger the tap behavior.
-            require-prior-idle-ms = <185>; // like quick-tap-ms however it will apply for any non-modifier key pressed before it
-            bindings = <&kp>, <&kp>;  // hold, tap
-        };
-
         // Left-hand HRM
-        ht_left: left_side_homerow_mod {
+
+        mt_left: mt_left {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             flavor = "balanced";
@@ -23,115 +14,68 @@
             quick-tap-ms = <175>;
             require-prior-idle-ms = <150>;
             bindings = <&kp>, <&kp>;
-            hold-trigger-key-positions = <KEYS_R THUMBS>;
+
+            hold-trigger-key-positions = <KEYS_R>;
             hold-trigger-on-release;
         };
 
         // Right-hand HRM
-        ht_right: right_side_homerow_mod {
+
+        mt_right: mt_right {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             flavor = "balanced";
             tapping-term-ms = <280>;
             quick-tap-ms = <175>;
-            require-prior-idle-ms = <125>;
+            require-prior-idle-ms = <150>;
             bindings = <&kp>, <&kp>;
-            hold-trigger-key-positions = <KEYS_L THUMBS>;
+
+            hold-trigger-key-positions = <KEYS_L>;
             hold-trigger-on-release;
         };
 
-        td_esc_scrl_slow: td_esc_scrl_slow {
-            compatible = "zmk,behavior-tap-dance";
-            #binding-cells = <0>;
-            tapping-term-ms = <150>;
-            bindings = <&lt 7 ESC>, <&mo 6>; // hold, tap, double_tap
-        };
-
-        td_space_nav: td_space {
-            compatible = "zmk,behavior-tap-dance";
-            #binding-cells = <0>;
-            tapping-term-ms = <120>;
-            bindings = <&lt 2 SPACE>, <&kp SPACE>; // hold, tap, double_tap
-        };
-
-        mo_clk: mo_click {
+        mt_caps_word: mt_caps_word {
             compatible = "zmk,behavior-hold-tap";
+            bindings = <&kp>, <&caps_word>;
+
             #binding-cells = <2>;
-            flavor = "hold-preferred";
-            tapping-term-ms = <40>;
-            hold-while-undecided;
-            bindings = <&mo>, <&mkp>;
-        };
-
-        td_clk: td_clk {
-            compatible = "zmk,behavior-tap-dance";
-            #binding-cells = <0>;
-            tapping-term-ms = <170>;
-            bindings = <&mo_clk 3 LCLK>, <&mkp LCLK>; // hold, tap, double_tap
-        };
-
-        mo_kp: mo_kp {
-            compatible = "zmk,behavior-hold-tap";
-            #binding-cells = <2>;
-            flavor       = "hold-preferred";
-            tapping-term-ms = <40>;
-            hold-while-undecided;
-            bindings = <&mo>, <&kp>;
-        };
-
-        td_bs: td_bs {
-            compatible = "zmk,behavior-tap-dance";
-            #binding-cells = <0>;
-            tapping-term-ms = <170>;
-            bindings = <&mo_kp 1 BACKSPACE>, <&kp BACKSPACE>; // hold, tap, double_tap
-        };
-
-        httl: ht_two_layers {
-            compatible = "zmk,behavior-hold-tap";
-            bindings = <&mo>, <&to>;
-            #binding-cells = <2>;
+            tapping-term-ms = <280>;
             flavor = "balanced";
+            require-prior-idle-ms = <150>;
+            quick-tap-ms = <175>;
+            hold-trigger-key-positions = <KEYS_R>;
+            hold-trigger-on-release;
+        };
+
+        td_n1_n2: td_n1_n2 {
+            compatible = "zmk,behavior-tap-dance";
+            #binding-cells = <0>;
+            bindings = <&kp N1>, <&kp N2>;
+
             tapping-term-ms = <125>;
         };
 
-        td_layers: td_layer_swap {
+        td_n3_n4: td_n3_n4 {
             compatible = "zmk,behavior-tap-dance";
             #binding-cells = <0>;
-            bindings = <&to 0>, <&to 4>; // tap, double_tap
+            tapping-term-ms = <125>;
+            bindings = <&kp N3>, <&kp N4>;
         };
 
-        td_clk_scrl: td_click_or_scroll {
+        td_base_layer: td_base_layer {
             compatible = "zmk,behavior-tap-dance";
             #binding-cells = <0>;
-            tapping-term-ms = <250>;
-            bindings = <&mkp RCLK>, <&mo 8>;  // tap/hold, double_tap
+            tapping-term-ms = <150>;
+            bindings = <&to 0>, <&to 1>, <&to 2>;
         };
 
-        td_bore: BASE_or_EXTRA {
-            compatible = "zmk,behavior-tap-dance";
-            #binding-cells = <0>;
-            bindings = <&mo 5>, <&to 0>;
-        };
+        lt_td_base_layer: lt_td_base_layer {
+            compatible = "zmk,behavior-hold-tap";
+            bindings = <&mo>, <&td_base_layer>;
 
-        mm_qm_ex: question_exclamation {
-            compatible    = "zmk,behavior-mod-morph";
-            #binding-cells = <0>;
-            bindings      = <&kp QUESTION>, <&kp EXCLAMATION>;
-            mods          = <(MOD_LSFT | MOD_RSFT)>;
-        };
-
-        mm_pr_col: period_colon {
-            compatible    = "zmk,behavior-mod-morph";
-            #binding-cells = <0>;
-            bindings      = <&kp PERIOD>, <&kp COLON>;
-            mods          = <(MOD_LSFT | MOD_RSFT)>;
-        };
-
-        mm_cm_sc: comma_semi_colon {
-            compatible    = "zmk,behavior-mod-morph";
-            #binding-cells = <0>;
-            bindings      = <&kp COMMA>, <&kp SEMICOLON>;
-            mods          = <(MOD_LSFT | MOD_RSFT)>;
+            #binding-cells = <2>;
+            flavor = "balanced";
+            tapping-term-ms = <150>;
         };
     };
 };
