--- a/config/keymap/behaviors.dtsi
+++ b/config/keymap/behaviors.dtsi
@@ -2,10 +2,10 @@
 #define KEYS_R 6 7 8 9 10 11 18 19 20 21 22 23 30 31 32 33 34 35 39 40 16 15 14 13  // Right-hand keys.
 #define THUMBS 36 37 38 39 40  // Thumb keys.
 
-/ {    
-    behaviors {
-        // Left-hand HRM
+&lt { flavor = "balanced"; };
 
+/ {
+    behaviors {
         mt_left: mt_left {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
@@ -18,8 +18,6 @@
             hold-trigger-key-positions = <KEYS_R>;
             hold-trigger-on-release;
         };
-
-        // Right-hand HRM
 
         mt_right: mt_right {
             compatible = "zmk,behavior-hold-tap";
