fix(ci): base layer name to draw

--- a/.github/workflows/draw_keymaps.yaml
+++ b/.github/workflows/draw_keymaps.yaml
@@ -185,7 +185,7 @@ jobs:
 
               # BASE-only render
               keymap "${config_arg[@]}" draw "${{ inputs.output_folder }}/$keyboard.yaml" \
-                -s BASE --keys-only $([[ -n "$json_path/${keyboard}.json" ]] && echo "-j $json_path/${keyboard}.json") \
+                -s CANARY --keys-only $([[ -n "$json_path/${keyboard}.json" ]] && echo "-j $json_path/${keyboard}.json") \
                 > "${{ inputs.output_folder }}/base/$keyboard.svg" \
               || error_occurred=1
 
