revert: "feat: activate mouse layer on trackball event"
This reverts commit e8125969605f743a9a8e34f845a39b8fb626461c.

--- a/config/charybdis_pointer.dtsi
+++ b/config/charybdis_pointer.dtsi
@@ -3,7 +3,7 @@
 
 &trackball_listener {
     /* base processor chain on all layers */
-    input-processors = <&zip_xy_scaler 5 5> <&zip_temp_layer 8 2000>;
+    input-processors = <&zip_xy_scaler 5 5>;
 
     /* layer-9 scroll override */
     scroller: scroller {
