--- a/.github/workflows/draw_keymaps.yaml
+++ b/.github/workflows/draw_keymaps.yaml
@@ -30,7 +30,7 @@ on:
         type: string
       parse_args:
         description: "Map of keyboard names to extra `keymap parse` args, e.g. `corne:'--layer-names Def Lwr Rse Fun'`"
-        default: "charybdis: '-b keymap-drawer/charybdis.yaml'"
+        default: ""
         required: false
         type: string
       draw_args:
