ci: temporarily disable base layer render

--- a/.github/workflows/draw_keymaps.yaml
+++ b/.github/workflows/draw_keymaps.yaml
@@ -184,10 +184,10 @@ jobs:
               }
 
               # BASE-only render
-              keymap "${config_arg[@]}" draw "${{ inputs.output_folder }}/$keyboard.yaml" \
-                -s CANARY --keys-only $([[ -n "$json_path/${keyboard}.json" ]] && echo "-j $json_path/${keyboard}.json") \
-                > "${{ inputs.output_folder }}/base/$keyboard.svg" \
-              || error_occurred=1
+              # keymap "${config_arg[@]}" draw "${{ inputs.output_folder }}/$keyboard.yaml" \
+              #   -s CANARY --keys-only $([[ -n "$json_path/${keyboard}.json" ]] && echo "-j $json_path/${keyboard}.json") \
+              #   > "${{ inputs.output_folder }}/base/$keyboard.svg" \
+              # || error_occurred=1
 
               DRAWINGS+=(\"${{ inputs.output_folder }}/$keyboard.yaml\" \
                        \"${{ inputs.output_folder }}/$keyboard.svg\" \
