ci: remove base layer render

--- a/.github/workflows/draw_keymaps.yaml
+++ b/.github/workflows/draw_keymaps.yaml
@@ -175,7 +175,6 @@ jobs:
                   draw_args+=" -j $json_path/${keyboard}.json"
               fi
 
-              # Full (regular) render
               keymap "${config_arg[@]}" parse -z "$keymap_file" $parse_args >"${{ inputs.output_folder }}/$keyboard.yaml" \
               && keymap "${config_arg[@]}" draw "${{ inputs.output_folder }}/$keyboard.yaml" $draw_args >"${{ inputs.output_folder }}/$keyboard.svg" \
               || {
@@ -183,15 +182,8 @@ jobs:
                   error_occurred=1
               }
 
-              # BASE-only render
-              # keymap "${config_arg[@]}" draw "${{ inputs.output_folder }}/$keyboard.yaml" \
-              #   -s CANARY --keys-only $([[ -n "$json_path/${keyboard}.json" ]] && echo "-j $json_path/${keyboard}.json") \
-              #   > "${{ inputs.output_folder }}/base/$keyboard.svg" \
-              # || error_occurred=1
-
               DRAWINGS+=(\"${{ inputs.output_folder }}/$keyboard.yaml\" \
-                       \"${{ inputs.output_folder }}/$keyboard.svg\" \
-                       \"${{ inputs.output_folder }}/base/$keyboard.svg\")
+                       \"${{ inputs.output_folder }}/$keyboard.svg\")
           done
           IFS=','
           echo "DRAWINGS=[${DRAWINGS[*]}]" >> $GITHUB_OUTPUT
@@ -211,7 +203,7 @@ jobs:
         if: ( inputs.destination == 'commit' || inputs.destination == 'both' )
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          file_pattern: "${{ inputs.output_folder }}/**/*.svg ${{ inputs.output_folder }}/**/*.yaml"
+          file_pattern: "${{ inputs.output_folder }}/*.svg ${{ inputs.output_folder }}/*.yaml"
           disable_globbing: true
           # So the previous commit is amended instead of creating a new one when desired
           # See:
