--- a/.github/workflows/draw_keymap.yaml
+++ b/.github/workflows/draw_keymap.yaml
@@ -14,7 +14,7 @@ jobs:
       contents: write
     with:
       config_path:     "keymap-drawer/config.yaml"
-      parse_args:      "-c 12"
+      parse_args:      "-c 12 -b keymap-drawer/charybdis.yaml"
       draw_args:       ""
       amend_commit:    false
       destination:     artifact
