--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -1,5 +1,53 @@
 / {
     combos {
         compatible = "zmk,combos";
+
+        cb_lclk {
+            bindings = <&mkp LCLK>;
+            key-positions = <19 20>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        cb_rclk {
+            bindings = <&mkp RCLK>;
+            key-positions = <20 21>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        cb_mclk {
+            bindings = <&mkp MCLK>;
+            key-positions = <19 20 21>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        cb_mo_scroll {
+            bindings = <&mo 9>;
+            key-positions = <19 21>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        cb_mb4 {
+            bindings = <&mkp MB4>;
+            key-positions = <31 32>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        cb_mb5 {
+            bindings = <&mkp MB5>;
+            key-positions = <32 33>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
     };
 };
