--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -2,49 +2,49 @@
     combos {
         compatible = "zmk,combos";
 
-        cb_lclk {
+        c_lclk {
             bindings = <&mkp LCLK>;
-            key-positions = <19 20>;
-            layers = <8>;
-            timeout-ms = <50>;
-            require-prior-idle-ms = <150>;
-        };
-
-        cb_rclk {
-            bindings = <&mkp RCLK>;
-            key-positions = <20 21>;
-            layers = <8>;
-            timeout-ms = <50>;
-            require-prior-idle-ms = <150>;
-        };
-
-        cb_mclk {
-            bindings = <&mkp MCLK>;
-            key-positions = <19 20 21>;
-            layers = <8>;
-            timeout-ms = <50>;
-            require-prior-idle-ms = <150>;
-        };
-
-        cb_mo_scroll {
-            bindings = <&mo 9>;
-            key-positions = <19 21>;
-            layers = <8>;
-            timeout-ms = <50>;
-            require-prior-idle-ms = <150>;
-        };
-
-        cb_mb4 {
-            bindings = <&mkp MB4>;
             key-positions = <31 32>;
             layers = <8>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
         };
 
-        cb_mb5 {
-            bindings = <&mkp MB5>;
+        c_rclk {
+            bindings = <&mkp RCLK>;
             key-positions = <32 33>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        c_mclk {
+            bindings = <&mkp MCLK>;
+            key-positions = <31 32 33>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        c_mo_scroll {
+            bindings = <&mo 9>;
+            key-positions = <31 33>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        c_mb4 {
+            bindings = <&mkp MB4>;
+            key-positions = <19 20>;
+            layers = <8>;
+            timeout-ms = <50>;
+            require-prior-idle-ms = <150>;
+        };
+
+        c_mb5 {
+            bindings = <&mkp MB5>;
+            key-positions = <20 21>;
             layers = <8>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
