fix(keymap): fix slow layer, decrease combo timeout

--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,14 +1,14 @@
 / {
     macros {
-        m_mo_ptr_trans: m_mo_ptr_trans {
+        m_mo_slow_trans: m_mo_slow_trans {
             compatible = "zmk,behavior-macro";
             #binding-cells = <0>;
             bindings =
                 <&macro_press>,
-                <&mo 8 &trans>,
+                <&mo 10 &trans>,
                 <&macro_pause_for_release>,
                 <&macro_release>,
-                <&mo 8 &trans>;
+                <&mo 10 &trans>;
         };
     };
 };
