--- a/config/behaviors.dtsi
+++ b/config/behaviors.dtsi
@@ -32,6 +32,21 @@
             hold-trigger-on-release;
         };
 
+        // layer-tap but hold activates preemptively and tap always activates unless tapping term expires
+        // For use with slow layer
+        lt_eager: lt_trans {
+            compatible = "zmk,behavior-hold-tap";
+            #binding-cells = <2>;
+            flavor = "tap-preferred";
+            tapping-term-ms = <280>;
+            quick-tap-ms = <175>;
+            require-prior-idle-ms = <150>;
+            bindings = <&mo>, <&kp>;
+
+            hold-trigger-key-positions = <>; // Trigger tap on any other key press
+            hold-while-undecided;
+        };
+
         td_n1_n2: td_n1_n2 {
             compatible = "zmk,behavior-tap-dance";
             #binding-cells = <0>;
