--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -5,7 +5,7 @@
         c_lclk {
             bindings = <&mkp LCLK>;
             key-positions = <31 32>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
         };
@@ -13,7 +13,7 @@
         c_rclk {
             bindings = <&mkp RCLK>;
             key-positions = <32 33>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
         };
@@ -21,15 +21,15 @@
         c_mclk {
             bindings = <&mkp MCLK>;
             key-positions = <31 32 33>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
         };
 
         c_mo_scroll {
-            bindings = <&mo 9>;
+            bindings = <&mo 8>;
             key-positions = <31 33>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <50>;
             require-prior-idle-ms = <150>;
         };
@@ -37,7 +37,7 @@
         c_mb4 {
             bindings = <&mkp MB4>;
             key-positions = <19 20>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <40>;
             require-prior-idle-ms = <150>;
         };
@@ -45,7 +45,7 @@
         c_mb5 {
             bindings = <&mkp MB5>;
             key-positions = <20 21>;
-            layers = <8>;
+            layers = <0 1 2>;
             timeout-ms = <40>;
             require-prior-idle-ms = <150>;
         };
